@@ -1,3 +1,7 @@
+Travel::Status::DE::VRR 1.14 - Sat Oct 08 2016
+
+    * efa-m: Fix broken encoding in --list output
+
 Travel::Status::DE::VRR 1.13 - Sun Mar 06 2016
 
     * EFA: Add accessors name_candidates and place_candidates
